# mergeable-etcd

./: .gitignore  .gitmodules  BUILDING.md  Cargo.nix  Cargo.toml  ETCD_DATA_EXTRACTION.md  EXPERIMENTS.md  FEATURES.md  Makefile  README.md  REDESIGN.md  RUNNING.md  TODO.md  USING.md  benchall.sh  bencher-latency.ipynb  crate-hashes.json  filter-results.sh  flake.nix  jsontest.sh  kind-config.yaml  local_cluster.py  test.sh
bencher/: Cargo.toml
bencher/src/: client.rs  lib.rs  loadgen.rs  main.rs  options.rs  trace.rs
crates/bencher/: Cargo.toml
crates/bencher/src/: address.rs  client.rs  input.rs  lib.rs  loadgen.rs  main.rs  options.rs  output.rs  trace.rs
crates/dismerge/: Cargo.toml
crates/dismerge-client/: Cargo.toml
crates/dismerge-client/src/: main.rs
crates/dismerge-core/: Cargo.toml
crates/dismerge-core/src/: builder.rs  cache.rs  document.rs  lib.rs  readdoc.rs  req_resp.rs  syncer.rs  transaction.rs  value.rs  watch_server.rs  watcher.rs
crates/dismerge-core/src/document/: tests.rs
crates/dismerge-core/src/document/snapshots/: dismerge_core__document__tests__write_value.snap
crates/dismerge/src/: auth.rs  cluster.rs  kv.rs  lease.rs  lib.rs  main.rs  maintenance.rs  metrics.rs  options.rs  peer.rs  persister.rs  replication.rs  watch.rs
crates/dismerge/tests/: initial_cluster.rs
crates/mergeable-etcd/: Cargo.toml
crates/mergeable-etcd-core/: Cargo.toml
crates/mergeable-etcd-core/src/: builder.rs  document.rs  error.rs  lib.rs  req_resp.rs  syncer.rs  transaction.rs  value.rs  watch_server.rs  watcher.rs
crates/mergeable-etcd-core/src/document/: tests.rs
crates/mergeable-etcd/src/: auth.rs  cluster.rs  kv.rs  lease.rs  lib.rs  main.rs  maintenance.rs  metrics.rs  options.rs  peer.rs  persister.rs  tls.rs  watch.rs
crates/mergeable-etcd/tests/: initial_cluster.rs
ecetcd/: Cargo.toml
ecetcd/src/: address.rs  health.rs  key_range.rs  lib.rs  peer.rs  server.rs  services.rs  store.rs  trace.rs
ecetcd/src/peer/: client.rs  server.rs  service.rs
ecetcd/src/server/: lease.rs  watcher.rs
ecetcd/src/services/: cluster.rs  kv.rs  lease.rs  maintenance.rs  watch.rs
ecetcd/src/store/: backend.rs  content.rs  document.rs  frontend.rs  key.rs  peer.rs  revision.rs  server.rs  ttl.rs  value.rs  version.rs
ecetcd/src/store/backend/: actor.rs  handle.rs
ecetcd/src/store/document/: actor.rs  handle.rs  inner.rs  outstanding.rs
ecetcd/src/store/frontend/: actor.rs  document.rs  handle.rs
ecetcd/src/store/value/: ivalue.rs  lww.rs  mod.rs  snapshot.rs
ecetcd/tests/: etcd_del.rs  etcd_lease.rs  etcd_put.rs  etcd_range.rs  etcd_txn.rs  etcd_watch.rs  quickcheck.rs  txn.rs
ecetcd/tests/common/: mod.rs
eckd/: Cargo.toml
eckd/src/: address.rs  health.rs  k8s.rs  lib.rs  main.rs  server.rs
eckd/src/server/: lease.rs  mod.rs  watcher.rs
eckd/src/services/: kv.rs  lease.rs  maintenance.rs  mod.rs  watch.rs
eckd/src/store/: backend.rs  content.rs  db.rs  frontend.rs  key.rs  kv.rs  mod.rs  revision.rs  server.rs  tree.rs  ttl.rs
eckd/src/store/backend/: actor.rs  handle.rs
eckd/src/store/frontend/: actor.rs  handle.rs
eckd/src/store/value/: k8s.rs  lww.rs  mod.rs
eckd/tests/: etcd_put.rs  etcd_range.rs  txn.rs  watch.rs
eckd/tests/common/: mod.rs
etcd-proto/: Cargo.toml  build.rs
etcd-proto/proto/: rpc.proto
etcd-proto/src/: authpb.rs  etcdserverpb.rs  lib.rs  mvccpb.rs
experiments/: Cargo.toml
experiments/automerge-changes/: Cargo.toml  README.md  plot.py
experiments/automerge-changes/src/: main.rs
experiments/automerge-diff/: Cargo.toml  README.md  plot.py
experiments/automerge-diff/src/: main.rs
experiments/automerge-sync/: Cargo.toml  README.md  plot.py
experiments/automerge-sync/src/: main.rs
experiments/bencher/: Cargo.toml  README.md  analysis.ipynb  plot.py
experiments/bencher/src/: main.rs
experiments/clusterloader/: Cargo.toml  Justfile  README.md  analysis-delay.ipynb  analysis-loss.ipynb  analysis-minority.ipynb  analysis.ipynb  config.yaml  deployment.yaml  flake.nix
experiments/clusterloader/caelum/inventory/: inventory.ini
experiments/clusterloader/caelum/inventory/credentials/: kubeadm_certificate_key.creds
experiments/clusterloader/demos/: double-minority.py  lib.py  single-minority.py
experiments/clusterloader/results/delay/image=etcd,masters=1,delay=0,repeat=1/: PodStartupLatency_PodStartupLatency_test_2022-03-09T15:44:34Z.json  StatefulPodStartupLatency_PodStartupLatency_test_2022-03-09T15:44:34Z.json  StatelessPodStartupLatency_PodStartupLatency_test_2022-03-09T15:44:34Z.json  config.json  generatedConfig_test.yaml  junit.xml  log
experiments/clusterloader/results/delay/image=etcd,masters=1,delay=10,repeat=1/: config.json  junit.xml  log  (+4 more)
experiments/clusterloader/scripts/: clear-iptables.sh  clear-tc.sh  control-plane-delay.sh  control-plane-full-loss.sh  demo-minority.py  lib.py  partitioned-minority.py  run-clusterloader.sh  run-with-partitions.py  run-with-partitions.sh  run-with-varying-delays.sh  show-tc.sh  varying-delays.py
experiments/clusterloader/src/: main.rs
experiments/distributed-bencher/: README.md  analysis.ipynb  ansible.cfg  hosts  main.yaml  meta-run.sh  run.sh  run.yaml  setup.yaml  teardown.sh  teardown.yaml  values.yaml
experiments/distributed-bencher/templates/: configuration.json.j2
experiments/etcd-bencher/: Cargo.toml
experiments/etcd-bencher/src/: main.rs
experiments/go-ycsb/: Cargo.toml
experiments/go-ycsb/src/: main.rs
experiments/kubernetes-scheduling/: Cargo.toml
experiments/kubernetes-scheduling/src/: deployment.yaml  main.rs
experiments/kubespray/: Makefile  README.md  ansible.cfg
experiments/kubespray/inventory/caelum/: inventory.ini
experiments/src/: bencher.rs  cluster_latency.rs  k8s_startup.rs  main.rs
kubernetes-proto/: Cargo.toml  build.rs
kubernetes-proto/src/: lib.rs
proto/etcd-proto/: Cargo.toml
proto/etcd-proto/proto/: auth.proto
proto/etcd-proto/src/: lib.rs
proto/peer-proto/: Cargo.toml
proto/peer-proto/proto/: peer.proto
recetcd/: Cargo.toml
recetcd/src/: main.rs  value.rs
(+320 files in other folders)
