[workspace]
members = [
  "crates/*",
  "experiments/automerge-changes",
  "experiments/bencher",
  # "experiments/clusterloader",
  # "experiments/etcd-bencher",
  # "experiments/go-ycsb",
  # "experiments/kubernetes-scheduling",
]

[profile.release]
debug = true

[patch.crates-io]
# https://github.com/automerge/automerge/pull/550
# automerge = {git = "https://github.com/jeffa5/automerge", branch = "cmp-heads"}
automerge = { path = "../automerge/rust/automerge" }

autosurgeon = {git = "https://github.com/jeffa5/autosurgeon", branch = "metcd"}
