[workspace]
members = [
  "crates/*",
  "experiments/automerge-changes",
  "experiments/automerge-diff",
  "experiments/automerge-sync",
  "experiments/bencher",
]

[profile.release]
debug = true

[patch.crates-io]
# https://github.com/automerge/automerge/pull/550
automerge = {git = "https://github.com/jeffa5/automerge", branch = "cmp-heads"}

automerge-persistent = { git = "https://github.com/jeffa5/automerge-persistent", branch = "main" }

autosurgeon = {git = "https://github.com/jeffa5/autosurgeon", branch = "metcd"}
