[package]
name = "bencher"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
etcd-proto = { path = "../etcd-proto" }
kubernetes-proto = { path = "../kubernetes-proto" }
tonic = { version = "0.4.0", git = "https://github.com/hyperium/tonic", features = ["transport", "tls"] }
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
hyper = "0.14.2"
tower = "0.4.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
chrono = "0.4.19"
anyhow = "1.0.40"
futures = "0.3.12"
rand = "0.8.3"
arbitrary = "1.0.1"
url = "2.2.2"
thiserror = "1.0.25"
reqwest = "0.11.4"
