[package]
name = "eckd"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
sled = "0.34.6"
tonic = { version = "0.4.0", features = ["transport", "tls"] }
prost = "0.7"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
etcd-proto = { path = "../etcd-proto" }
kubernetes-proto = { path = "../kubernetes-proto" }
derive_builder = "0.9.0"
structopt = "0.3.21"
url = "2.2.0"
thiserror = "1.0.23"
futures = "0.3.12"
serde = { version = "1.0.123", features = ["derive"] }
hyper = "0.14.2"
tower = "0.4.4"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
futures-core = "0.3.12"
tokio-stream = "0.1.2"
serde_json = "1.0.62"

[build-dependencies]
tonic-build = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
quickcheck = "1.0.3"
tempfile = "3.2.0"
