[package]
name = "eckd"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
description = "An eventually consistent Kubernetes datastore"
readme = "README.md"
repository = "https://gitlab.developers.cam.ac.uk/apj39/eckd-rs"

[dependencies]
ecetcd = { path = "../ecetcd" }
structopt = "0.3.21"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
kubernetes-proto = { path = "../kubernetes-proto" }
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main" }
prost = "0.7.0"

[dev-dependencies]
pretty_assertions = "0.7.1"
