[package]
name = "experiments"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
futures = "0.3.13"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"
plotters = "0.3.0"
kube = "0.51.0"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", features = ["v1_19"] }
bencher = { path = "../bencher" }
