[package]
name = "kubernetes-proto"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
description = "Kubernetes resource protobuf types in Rust"
readme = "README.md"
repository = "https://gitlab.developers.cam.ac.uk/apj39/eckd-rs"

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main" }
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
arbitrary = { version = "1.0.1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4.0"
