[package]
name = "recetcd"
version = "0.1.0"
edition = "2018"

[dependencies]
ecetcd = { path = "../ecetcd" }
structopt = "0.3.21"
tracing = "0.1.26"
tracing-subscriber = "0.2.15"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
automergeable = { git = "https://github.com/jeffa5/automergeable", branch = "main" }
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
opentelemetry-jaeger = "0.13.0"
tracing-opentelemetry = "0.13.0"
