[package]
name = "bencher"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
arbitrary = "1.0.1"
async-channel = "1.6.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
csv = "1.1.6"
etcd-proto = { path = "../../proto/etcd-proto" }
mergeable-proto = { path = "../../proto/mergeable-proto" }
futures = "0.3.12"
hyper = "0.14.2"
rand = "0.8.3"
reqwest = "0.11.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
taskwait = "0.4.1"
thiserror = "1.0.25"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
tokio-stream = "0.1.8"
tonic = { version = "0.8.3", features = ["transport", "tls"] }
tower = "0.4.4"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
