[package]
name = "bencher"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
arbitrary = "1.3.0"
async-channel = "1.8.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
etcd-proto = { path = "../../proto/etcd-proto" }
mergeable-proto = { path = "../../proto/mergeable-proto" }
futures = "0.3.28"
hyper = "0.14.26"
rand = "0.8.5"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
taskwait = "0.4.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["transport", "tls"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.3.1"
