[package]
name = "dismerge-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mergeable-proto = { path = "../../proto/mergeable-proto" }
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
automerge = "0.3.0"
