[package]
name = "dismerge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.4.1"
automerge-persistent = "0.4.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
mergeable-proto = { path = "../../proto/mergeable-proto" }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-stream = "0.1.14"
futures = "0.3.28"
rand = "0.8.5"
chrono = "0.4.26"
thiserror = "1.0.40"
autosurgeon = "0.6.0"
serde_json = "1.0.96"

[dev-dependencies]
insta = "1.29.0"
pretty_assertions = "1.3.0"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
