[package]
name = "mergeable-etcd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.3.0"
automerge-persistent = "0.3.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
etcd-proto = { path = "../../proto/etcd-proto" }
tonic = "0.8.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tokio-stream = "0.1.8"
futures = "0.3.21"
rand = "0.8.5"
chrono = "0.4.19"
thiserror = "1.0.31"

[dev-dependencies]
pretty_assertions = "1.2.1"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
