[package]
name = "exp-automerge-changes"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.4.1"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
async-trait = "0.1.42"
serde = { version = "1.0.123", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }
anyhow = "1.0.38"
chrono = "0.4.19"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
csv = "1.2.1"
