[package]
name = "exp-automerge-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.4.1"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
csv = "1.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
