[package]
name = "bencher-experiment"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
futures = "0.3.13"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"
plotters = "0.3.0"
bencher = { path = "../../bencher" }
bollard = "0.10.1"
