[package]
name = "bencher-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
futures = "0.3.13"
chrono = "0.4.19"
clap = { version = "3.1.10", features = ["derive"] }
plotters = "0.3.0"
bollard = "0.12.0"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
csv = "1.1.6"
polars = { version = "0.20.0", features = ["cross_join"] }
