[package]
name = "bencher-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
futures = "0.3.28"
chrono = "0.4.26"
clap = { version = "3.2.25", features = ["derive"] }
bollard = "0.12.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
csv = "1.2.2"
bencher = { path = "../../crates/bencher" }
etcd-proto = { path = "../../proto/etcd-proto" }
mergeable-proto = { path = "../../proto/mergeable-proto" }
