[package]
name = "peer-proto"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
description = "Ecetcd peer API protobuf types in Rust"
repository = "https://gitlab.developers.cam.ac.uk/apj39/eckd-rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"
serde = { version = "1.0.123", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
