[package]
name = "peer-proto"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2021"
description = "Ecetcd peer API protobuf types in Rust"
repository = "https://gitlab.developers.cam.ac.uk/apj39/eckd-rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
